# sim_ros_gazebo_car

./: README.md  run_env.sh  run_robot.sh
bag_video/: sim_bag_1.bag  sim_bag_2.bag  sim_bag_3.bag
src/control/: CMakeLists.txt  package.xml
src/control/include/: control_pid.h
src/control/src/: control_pid.cc
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/srv/: control_param.srv
src/quaternion/: CMakeLists.txt  package.xml  quaternion.cc  quaternion.h
src/quaternion/include/: quaternion.h
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/launch/: robot_control.launch
src/robot_control/src/: control_keyboard.cc  control_service.cc  sensor.cc
src/robot_model/: CMakeLists.txt  package.xml
src/robot_model/config/: show_robot.rviz  wheel_control.yaml
src/robot_model/launch/: env.launch  gazebo.launch  rviz.launch
src/robot_model/urdf/: imu.xacro  init.xacro  robot.xacro
src/robot_model/worlds/: pool_circle.world
src/robot_model/worlds/pool_circle/: model.config  model.sdf
src/swim_bot/: package.xml
src/swim_bot/config/: show_robot.rviz  wheels.yaml
src/swim_bot/launch/: env.launch  gazebo.launch
src/swim_bot/urdf/: robot.xacro
src/swim_bot/worlds/: pool_wall.world
src/swim_bot/worlds/pool_wall/: model.config  model.sdf
